# ascii3d

./: .gitignore  .gitmodules  CMakeLists.txt  CourierNewB.h  README.md  ascii3d.cpp  ascii_art.cpp  ascii_art.h  image2ascii.cpp  main.cpp  spy.cpp  terminal_size.h
include/: Camera.h  DirectionalLight.h  Light.h  Material.h  Object.h  Plane.h  PointLight.h  Ray.h  Sphere.h  Triangle.h  TriangleSoup.h  blinn_phong_shading.h  dirname.h  first_hit.h  raycolor.h  readSTL.h  read_json.h  reflect.h  viewing_ray.h  write_ppm.h
src/: DirectionalLight.cpp  Plane.cpp  PointLight.cpp  Sphere.cpp  Triangle.cpp  TriangleSoup.cpp  blinn_phong_shading.cpp  first_hit.cpp  raycolor.cpp  reflect.cpp  viewing_ray.cpp  write_ppm.cpp
